--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,18 @@ html,body{
   background-color:black;
 }
 
+.App{
+  max-width:800px;
+  margin: 2rem auto;
+  position:relative;
+}
+
 .header{
   display:flex;
   justify-content:space-between;
   align-items:center;
   color:white;
-  padding:.5rem 3rem;
+  padding:.5rem 1rem;
 }
 .header .title{
   font-size:3rem;
@@ -27,6 +33,10 @@ html,body{
 
 .header .mistakes{
   font-size:1.5rem;
+}
+
+.keyboard-container{
+  margin:0 1rem;
 }
 
 .keyboard-container div{
@@ -41,12 +51,19 @@ html,body{
   display:flex;
   justify-content:center;
   align-items:center;
-  width:70px;
-  height:70px;
+  width:60px;
+  height:60px;
   border: 3px solid white;
   color:white;
   font-size:2.5rem;
   cursor:pointer;
+}
+
+
+.keyboard-container div .letter:hover{
+  color:black;
+  background-color:white;
+
 }
 
 .keyboard-container div .clicked {
@@ -59,7 +76,7 @@ html,body{
   gap:.5rem;
   justify-content:center;
   align-items:center;
-  margin:5rem 0;
+  margin:5rem 1rem;
 }
 
 .word-container .letter{
@@ -67,16 +84,69 @@ html,body{
   justify-content:center;
   align-items:center;
   color:white;
-  width:70px;
-  height:70px;
+  width:60px;
+  height:60px;
   border-bottom: 3px solid white;
 }
 
 .word-container .letter h1{
-  font-size:2.5rem;
+  font-size:2rem;
 }
 
 
 .word-container .letter .show{
   visibility: initial;
+}
+
+.modal{
+  color:white;
+  background-color:black;
+  border: 3px solid white;
+  width:100%;
+  height:100%;
+  text-align:center;
+
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%, -50%);
+}
+
+.modal h1{
+  font-size:5rem;
+}
+
+.modal button{
+  background-color:white;
+  color:black;
+  border: 3px solid white;
+  font-size:2rem;
+  padding:.5rem 1rem;
+  font-weight:bold;
+  cursor:pointer;
+}
+
+.main{
+  display:flex;
+  justify-items: center;
+  align-items:center;
+  gap:1rem;
+  margin-bottom:2rem;
+}
+
+.main .mari{
+  height:200px;
+  width:150px;
+  margin:0 auto;
+}
+
+.main .mari img{
+  width:100%;
+  height:100%;
+
 }
